<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/wallpaper">

    // Header
    <TextView
        android:id="@+id/reg_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="Register"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    // Name Box
    <EditText
        android:id="@+id/reg_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/reg_title"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white"
        android:background="#30ffffff"
        android:bottomLeftRadius="10dp"
        android:bottomRightRadius="10dp"
        android:drawableLeft="@drawable/ic_baseline_person_pin_24"
        android:drawablePadding="20dp"
        android:elevation="4dp"
        android:hint="Name"
        android:textColorHint="@color/white"
        android:padding="20dp"
        android:topLeftRadius="10dp"
        android:topRightRadius="10dp" />

    // Email Box
    <EditText
        android:id="@+id/reg_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/reg_name"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:bottomLeftRadius="10dp"
        android:bottomRightRadius="10dp"
        android:drawableLeft="@drawable/ic_baseline_person_pin_24"
        android:drawablePadding="20dp"
        android:elevation="4dp"
        android:hint="E-mail"
        android:textColorHint="@color/white"
        android:padding="20dp"
        android:textColor="@color/white"
        android:topLeftRadius="10dp"
        android:topRightRadius="10dp" />

    // Password Box
    <EditText
        android:id="@+id/reg_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/reg_email"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:bottomLeftRadius="10dp"
        android:bottomRightRadius="10dp"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="20dp"
        android:elevation="4dp"
        android:hint="Password"
        android:textColorHint="@color/white"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/white"
        android:topLeftRadius="10dp"
        android:topRightRadius="10dp" />

    // Confirm Password Box
    <EditText
        android:id="@+id/reg_conf_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/reg_password"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:bottomLeftRadius="10dp"
        android:bottomRightRadius="10dp"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="20dp"
        android:elevation="4dp"
        android:hint="Confirm password"
        android:textColorHint="@color/white"
        android:padding="20dp"
        android:textColor="@color/white"
        android:topLeftRadius="10dp"
        android:topRightRadius="10dp"
        android:inputType="textPassword"
        />

    // Create Account Button
    <com.google.android.material.button.MaterialButton
        android:id="@+id/createaccbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/reg_conf_password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:textSize="20sp"
        android:backgroundTint="@color/teal_700"
        android:text="CREATE ACCOUNT" />

    // Already Have Account text
    <TextView
        android:id="@+id/haveacc"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_centerVertical="true"
        android:layout_below="@id/createaccbutton"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="Already have an account?"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="15dp"
        android:textAlignment="center"/>

</RelativeLayout>