...
            android:padding="20dp"
            android:text="Shopping List"
            android:textColor="@color/white" />

    // Prep List Button
    <com.google.android.material.button.MaterialButton
        android:id="@+id/prep_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/list_button"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#30ffffff"
        android:drawableLeft="@drawable/ic_baseline_food_bank_24"
        android:drawablePadding="20dp"
        android:padding="20dp"
        android:text="What you need to know before you start..."
        android:textColor="@color/white" />

    // Quiz Button
    <com.google.android.material.button.MaterialButton
            android:id="@+id/quiz_button"
            android:layout_width="match_parent"
...
