...
            android:padding="20dp"
            android:text="Roasting"
            android:textColor="@color/white" />

    // Knife Skills Button
    <com.google.android.material.button.MaterialButton
        android:id="@+id/knife_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/roasting_button"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#30ffffff"
        android:drawableLeft="@drawable/ic_baseline_food_bank_24"
        android:drawablePadding="20dp"
        android:padding="20dp"
        android:text="Knife Skills"
        android:textColor="@color/white" />

    // Back Button
        <ImageButton
            android:id="@+id/backbutton"
            android:layout_width="wrap_content"
...
